Changed the main picture

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<h1>About our collaboration</h1>
 				<section class="main">
 					<img
-						src="./images/vodka-tea-image.jpg"
+						src="./images/tea-vodka-steam.jpg"
 						alt="An image of two tea cups and a bottle of vodka"
 						class="section-image"
 					/>
