Did usability testing changes

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 			<nav>
 				<a href="#recipes" class="no-style desktop nav-link">Our recipes</a>
 				<div class="nav-logos">
-					<a href="https://www.pickwicktea.com/">
+					<a href="#about-us">
 						<img
 							src="./images/pickwick-leaf-logo.png"
 							alt="A logo with text and a leaf behind"
 						/>
 					</a>
-					<a href="https://www.smirnoff.com/en-gb/">
+					<a href="#about-us">
 						<img
 							src="./images/smirnoff-logo.svg"
 							alt="A handwritten text saying Smirnoff"
@@ -52,7 +52,7 @@
 			</button>
 		</header>
 		<main>
-			<section class="about container">
+			<section id="about-us" class="about container">
 				<h1>About our collaboration</h1>
 				<section class="main">
 					<img
@@ -111,8 +111,8 @@
 							<h2>Spiked cinnamon tea</h2>
 							<ul>
 								<li>90ml boiling water</li>
-								<li>1 teabag of Warm Cinnamon Pickwick tea</li>
-								<li>30ml of Smirnoff Vodka</li>
+								<li>1 teabag of <a href="">Warm Cinnamon Pickwick tea</a></li>
+								<li>30ml of <a href="">Smirnoff Vodka</a></li>
 							</ul>
 						</section>
 						<div class="dots mobile">
@@ -132,8 +132,8 @@
 								<h2>Vodka toddy</h2>
 								<ul>
 									<li>90ml boiling water</li>
-									<li>1 teabag of Lemon Pickwick tea</li>
-									<li>30ml of Smirnoff Vodka</li>
+									<li>1 teabag of <a href="">Lemon Pickwick tea</a></li>
+									<li>30ml of <a href="">Smirnoff Vodka</a></li>
 								</ul>
 							</section>
 							<div class="dots mobile">
@@ -152,8 +152,8 @@
 								<h2>Moroccan Etiquette</h2>
 								<ul>
 									<li>90ml boiling water</li>
-									<li>1 teabag of Mint Pickwick tea</li>
-									<li>30ml of Smirnoff Vodka</li>
+									<li>1 teabag of <a href="">Mint Pickwick tea</a></li>
+									<li>30ml of <a href="">Smirnoff Vodka</a></li>
 									<li>10ml of Yellow Chartreuse</li>
 								</ul>
 							</section>
@@ -251,9 +251,9 @@
 			<p class="copyright">&copy; Pickwick, Inc.</p>
 			<section class="sources">
 				<p class="mobile">Photos and logos taken from</p>
-				<div class="first">smirnoff.com pickwick.com</div>
-				<div class="second">fontawesome.com unsplash.com</div>
-				<div class="third">pexels.com</div>
+				<p class="first">smirnoff.com pickwick.com</p>
+				<p class="second">fontawesome.com unsplash.com</p>
+				<p class="third">pexels.com</p>
 			</section>
 		</footer>
 	</body>
